--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="w3-row w3-padding-48" id="about">
 
     <div class="w3-col m6 w3-padding-large w3-hide-small"><br><br>
-        <img src="/home/k4r4n/Desktop/InternShip/k.jpg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
+        <img src="https://www.github.com/k4r4n29/Sample-static-web-page/k.jpg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -91,11 +91,11 @@
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="/home/k4r4n/Desktop/InternShip/images.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+      <img src="https://www.github.com/k4r4n29/Sample-static-web-page/images.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
     </div>
 
     <div class="w3-col m6 w3-padding-large w3-hide-small"><br><br>
-        <img src="/home/k4r4n/Desktop/InternShip/tree.jpeg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
+        <img src="https://www.github.com/k4r4n29/Sample-static-web-page/tree.jpeg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
     </div>
   </div>
 
