--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="https://www.github.com/k4r4n29/Sample-static-web-page/images.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+      <img src="https://github.com/k4r4n29/Sample-static-web-page/blob/master/images.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
     </div>
 
     <div class="w3-col m6 w3-padding-large w3-hide-small"><br><br>
