--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
 
     <div class="w3-col m6 w3-padding-large w3-hide-small"><br><br>
-        <img src="../tree.jpeg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
+        <img src="tree.jpeg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
     </div>
   </div>
 
