--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="w3-row w3-padding-48" id="about">
 
     <div class="w3-col m6 w3-padding-large w3-hide-small"><br><br>
-        <img src="../k.jpg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
+        <img src="k.jpg" class="w3-round w3-image" alt="Table Setting" width="600" height="">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -91,7 +91,7 @@
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="../images.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+      <img src="images.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
     </div>
 
     <div class="w3-col m6 w3-padding-large w3-hide-small"><br><br>
